float timer to the right and add some margins to body

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a href="#">View Highscores</a>
     <span class="timer">Time: 0</span>
   </header>
-  <main>
-    <div class="start-quiz">
+  <main class="justify-center">
+    <div class="start-quiz justify-center">
       <h1>Coding Quiz Challenge</h1>
       <p class="start-quiz-desc">
         Try to answer the following code-related questions with the time limit. Keep in mind that incorrect answers will
