--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
   <script src="./assets/js/script.js" defer></script>
   <title>Code Quiz</title>
 </head>
 
 <body>
   <header>
-    <a href="#" class="view-highscores">View Highscores</a>
-    <span class="timer">Time: 0</span>
+    <a href="#" class="btn btn btn-outline-primary view-highscores">View Highscores</a>
+    <span class="timer alert alert-secondary">Time: 0</span>
   </header>
   <main>
     <section id="start">
@@ -23,10 +25,10 @@
         Try to answer the following code-related questions with the time limit. Keep in mind that incorrect answers will
         penalize your score and your time will be reduced by ten seconds!
       </p>
-      <button>Start Quiz</button>
+      <button class="btn btn-primary">Start Quiz</button>
     </section>
     <section id="quiz" class="hidden">
-      <h2 class="question heading">Question</h2>
+      <h1 class="question heading">Question</h1>
       <ol class="choices">
         <li><button>Choice 1</button></li>
         <li><button>Choice 2</button></li>
@@ -37,7 +39,7 @@
       </div>
     </section>
     <section id="done" class="hidden">
-      <h2 class="heading">All done!</h2>
+      <h1 class="heading">All done!</h1>
       <p class="final-score"></p>
       <form class="record-score">
         <label for="initials">Enter Initials</label>
@@ -46,11 +48,13 @@
       </form>
     </section>
     <section id="highscores" class="hidden">
-      <h2 class="heading">Highscores</h2>
+      <h1 class="heading">Highscores</h1>
       <ol class="top-scores">
       </ol>
-      <button class="back">Go Back</button>
-      <button class="clear-scores">Clear Highscores</button>
+      <div class="highscore-buttons">
+        <button class="back btn btn-secondary">Go Back</button>
+        <button class="clear-scores btn btn-warning">Clear Highscores</button>
+      </div>
     </section>
   </main>
 </body>
