--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <a href="#" class="btn btn btn-outline-primary view-highscores">View Highscores</a>
-    <span class="timer alert alert-secondary">Time: 0</span>
+    <span class="timer alert alert-primary hidden">Time: 0</span>
   </header>
   <main>
     <section id="start">
@@ -26,7 +26,7 @@
         Try to answer the following code-related questions with the time limit. Keep in mind that incorrect answers will
         penalize your score and your time will be reduced by ten seconds!
       </p>
-      <button class="btn btn-primary">Start Quiz</button>
+      <button class="btn btn-primary start-button">Start Quiz</button>
     </section>
     <section id="quiz" class="hidden">
       <h3 class="question heading">Question</h3>
@@ -53,8 +53,8 @@
       <ol class="top-scores">
       </ol>
       <div class="highscore-buttons">
-        <button class="back btn btn-secondary">Go Back</button>
-        <button class="clear-scores btn btn-warning">Clear Highscores</button>
+        <button class="back btn btn-primary">Go Back</button>
+        <button class="clear-scores btn btn-danger">Clear Highscores</button>
       </div>
     </section>
   </main>
