get timer working along with play again button

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 <body>
   <header>
-    <a href="#" class="btn btn btn-outline-primary view-highscores">View Highscores</a>
-    <span class="timer alert alert-primary hidden">Time: 0</span>
+    <button class="btn btn btn-primary view-highscores">View Highscores</button>
+    <span class="timer alert alert-primary">Timer: 30 seconds</span>
   </header>
   <main>
-    <section id="start">
+    <section id="welcome">
       <h3 class="heading">Coding Quiz Challenge</h3>
-      <p class="start desc">
+      <p class="desc">
         Try to answer the following code-related questions with the time limit. Keep in mind that incorrect answers will
         penalize your score and your time will be reduced by ten seconds!
       </p>
@@ -53,7 +53,7 @@
       <ol class="top-scores">
       </ol>
       <div class="highscore-buttons">
-        <button class="back btn btn-primary">Go Back</button>
+        <button class="play-again btn btn-primary">Play Again</button>
         <button class="clear-scores btn btn-danger">Clear Highscores</button>
       </div>
     </section>
