--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="welcome">
       <h3 class="heading">Coding Quiz Challenge</h3>
       <p class="desc">
-        Try to answer the following code-related questions with the time limit. Keep in mind that incorrect answers will
+        Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will
         penalize your score and your time will be reduced by ten seconds!
       </p>
       <button class="btn btn-primary start-button">Start Quiz</button>
