style quiz buttons

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     </section>
     <section id="quiz" class="hidden">
       <h3 class="question heading">Question</h3>
-      <ol class="choices">
-        <li><button>Choice 1</button></li>
-        <li><button>Choice 2</button></li>
-        <li><button>Choice 3</button></li>
-        <li><button>Choice 4</button></li>
-      </ol>
+      <div class="choices">
+        <button class="btn btn-outline-primary">Choice</button>
+        <button class="btn btn-outline-primary">Choice</button>
+        <button class="btn btn-outline-primary">Choice</button>
+        <button class="btn btn-outline-primary">Choice</button>
+      </div>
       <div class="response">
       </div>
     </section>
