further simplify js callbacks

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="response">
       </div>
     </section>
-    <section id="done" class="hidden">
+    <section id="gameover" class="hidden">
       <h3 class="heading">All done!</h3>
       <p class="final-score"></p>
       <form class="record-score">
