add renderQuestion to ask random question

--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
       <button class="btn btn-primary start-button">Start Quiz</button>
     </section>
     <section id="quiz" class="hidden">
-      <h3 class="question heading">Question</h3>
+      <h3 class="question heading"></h3>
       <div class="choices">
-        <button class="btn btn-outline-primary">Choice</button>
-        <button class="btn btn-outline-primary">Choice</button>
-        <button class="btn btn-outline-primary">Choice</button>
-        <button class="btn btn-outline-primary">Choice</button>
       </div>
       <div class="response">
       </div>
