update timer to 60 seconds, reduce by 10 seconds on wrong answers

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <button class="btn btn btn-primary view-highscores">View Highscores</button>
+    <button class="btn btn-primary view-highscores">View Highscores</button>
     <span class="timer alert alert-primary">Timer: 30 seconds</span>
   </header>
   <main>
@@ -36,12 +36,12 @@
       </div>
     </section>
     <section id="gameover" class="hidden">
-      <h3 class="heading">All done!</h3>
+      <h3 class="heading">Game over!</h3>
       <p class="final-score"></p>
-      <form class="record-score">
-        <label for="initials">Enter Initials</label>
-        <input type="text" id="initials" name="initials">
-        <input type="submit" value="Submit">
+      <form class="record-score form-inline">
+        <label for="initials" class="input-group-text">Record your score: </label>
+        <input type="text" class="form-control" id="initials" name="initials" placeholder="Enter Initials">
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </section>
     <section id="highscores" class="hidden">
