--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./assets/img/favicon.ico">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/reset.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
   <script src="./assets/js/script.js" defer></script>
@@ -37,17 +37,17 @@
     </section>
     <section id="gameover" class="hidden">
       <h3 class="heading">Game over!</h3>
-      <p class="final-score"></p>
-      <form class="record-score form-inline">
-        <label for="initials" class="input-group-text">Record your score: </label>
-        <input type="text" class="form-control" id="initials" name="initials" placeholder="Enter Initials">
-        <button type="submit" class="btn btn-primary">Submit</button>
+      <h4 class="final-score"></h4>
+      <small class="final-score-calculation"></small>
+      <form class="form-inline">
+        <input type="text" class="form-control mb-2 mr-sm-2" id="save-score-input" placeholder="Enter name here">
+        <button type="submit" class="save-score-button btn btn-primary mb-2">Save score</button>
       </form>
     </section>
     <section id="highscores" class="hidden">
       <h3 class="heading">Highscores</h3>
-      <ol class="top-scores">
-      </ol>
+      <ul class="top-scores list-group">
+      </ul>
       <div class="highscore-buttons">
         <button class="play-again btn btn-primary">Play Again</button>
         <button class="clear-scores btn btn-danger">Clear Highscores</button>
