Sort highscores and limit to top 5

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <h4 class="final-score"></h4>
       <small class="final-score-calculation"></small>
       <form class="form-inline">
-        <input type="text" class="form-control mb-2 mr-sm-2" id="save-score-input" placeholder="Enter name here">
+        <input type="text" class="save-score-name form-control mb-2 mr-sm-2" placeholder="Enter name here">
         <button type="submit" class="save-score-button btn btn-primary mb-2">Save score</button>
       </form>
     </section>
     <section id="highscores" class="hidden">
-      <h3 class="heading">Highscores</h3>
-      <ul class="top-scores list-group">
-      </ul>
+      <h3 class="heading">Top 5 Scores</h3>
+      <ol class="top-scores list-group list-group-numbered mb-4">
+      </ol>
       <div class="highscore-buttons">
         <button class="play-again btn btn-primary">Play Again</button>
         <button class="clear-scores btn btn-danger">Clear Highscores</button>
