disable save when there is no input, change highscore badge to 'new'

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <small class="final-score-calculation"></small>
       <form class="form-inline">
         <input type="text" class="save-score-name form-control mb-2 mr-sm-2" placeholder="Enter name here">
-        <button type="submit" class="save-score-button btn btn-primary mb-2">Save score</button>
+        <button type="submit" class="save-score-button btn btn-primary mb-2" disabled="true">Save score</button>
       </form>
     </section>
     <section id="highscores" class="hidden">
